--- a/Core/1.1Introduction-to-the-Spring-IoC-Container-and-Beans.md
+++ b/Core/1.1Introduction-to-the-Spring-IoC-Container-and-Beans.md
@@ -1,6 +1,6 @@
 # 1.1 IoC容器和Beans介绍
 
-本章介绍了Spring框架中控制反转（IOC）原理的实现。IOC也称为依赖注入（DI）。它是指对象仅通过构造函数参数、工厂方法的参数或从工厂方法构造或返回对象实例后在其上设置的属性来定义其依赖项（即与之一起工作的其他对象）的过程。当容器在创建bean时将会注入这些依赖项。
+本章介绍了Spring框架中控制反转（IOC）原理的实现。IOC也称为依赖注入（DI）。它是指对象仅通过构造函数参数、工厂方法的参数或从工厂方法构造或返回对象实例后，通过在其上设置的属性来定义其依赖项（即与之一起工作的其他对象）的过程。当容器在创建bean时将会注入这些依赖项。
 
 这个过程跟bean自己控制实例化，或者通过直接构造类或服务定位器模式来定位其依赖项的方式相反（因此称为控制反转）。
 
