--- a/core-technologies/1.the-ioc-container/1.1introduction-to-the-spring-ioc-container-and-beans.md
+++ b/core-technologies/1.the-ioc-container/1.1introduction-to-the-spring-ioc-container-and-beans.md
@@ -15,7 +15,7 @@ org.spring framework.beans和org.springframework.context包是Springframework的
 * 事件发布
 * 应用层特定的上下文，如用于Web应用程序的WebApplicationContext
 
-简而言之，BeanFactory提供了配置框架和基本功能，ApplicationContext添加了更多特定于企业应用的功能。ApplicationContext是BeanFactory的一个完整的超集，在本章中专门用于描述Spring的IOC容器。有关使用BeanFactory的更多信息，请参见[BeanFactory](1.16the-beanfactory.md)。
+简而言之，BeanFactory提供了配置框架和基本功能，ApplicationContext添加了更多特定于企业应用的功能。ApplicationContext是BeanFactory的一个完整的超集，在本章中专门用于描述Spring的IOC容器。有关使用BeanFactory的更多信息，请参见[BeanFactory](https://docs.spring.io/spring-framework/docs/5.1.8.RELEASE/javadoc-api/org/springframework/beans/factory/BeanFactory.html)。
 
 在Spring中，构成应用程序主干并由SpringIOC容器管理的对象称为bean。bean是一个由SpringIOC容器实例化、组装和管理的对象。否则，bean只是应用程序中许多对象之一。bean以及它们之间的依赖关系反映在容器使用的配置元数据中。
 
