--- a/core-technologies/1.the-ioc-container/1.2container-overview.md
+++ b/core-technologies/1.the-ioc-container/1.2container-overview.md
@@ -105,7 +105,7 @@ ApplicationContext context = new ClassPathXmlApplicationContext("services.xml", 
 </beans>
 ```
 
-在前面的例子中，服务层由PetStoreServiceImpl类和两个类型为JpaAccountDao和JpaItemDao（基于jpa对象关系映射标准）的数据访问对象组成。property name元素引用了JavaBean的名字，ref元素引用另一个bean定义的名称。id和ref元素之间的链接表示协作对象之间的依赖关系。有关配置对象依赖项的详细信息，请参阅[依赖](1.4dependencies.md)。
+在前面的例子中，服务层由PetStoreServiceImpl类和两个类型为JpaAccountDao和JpaItemDao（基于jpa对象关系映射标准）的数据访问对象组成。property name元素引用了JavaBean的名字，ref元素引用另一个bean定义的名称。id和ref元素之间的链接表示协作对象之间的依赖关系。
 
 **构建基于XML的配置元数据**
 
